--- a/aboutstyle.css
+++ b/aboutstyle.css
@@ -48,10 +48,11 @@ body {
 }
 
 #stuffContainer {
-  margin-top: 30%;
-  width: 50%;
-  padding: 50px;
-  text-align: center;
+  position: absolute;
+  left: 50%;
+  top: 55%;
+
+  transform: translate(-50%, -50%);
 }
 
 li {
