--- a/aboutstyle.css
+++ b/aboutstyle.css
@@ -47,12 +47,18 @@ body {
   width: 30%;
 }
 
-#displayContainer {
-  position: absolute;
-  left: 50%;
-  top: 55%;
+#flexCenter {
+  display: flex;
 
-  transform: translate(-50%, -50%);
+  justify-content: center;
+  align-items: center;
+
+  height: 60vh;
+}
+
+#displayContainer {
+  width: 50vw;
+  height: 50vh;
 }
 
 li {
