--- a/aboutstyle.css
+++ b/aboutstyle.css
@@ -10,8 +10,7 @@ body {
 
 /* Style the links inside the navigation bar */
 #topnav a {
-  transition-property: background-color;
-  transition-duration: 0.75s;
+  transition: background-color 0.75s;
 
   float: left;
   display: block;
@@ -24,8 +23,7 @@ body {
 
 /* Change the color of links on hover */
 #topnav a:hover {
-  transition-property: background-color;
-  transition-duration: 0.75s;
+  transition: background-color 0.75s;
 
   background-color: #ddd;
   color: black;
@@ -59,6 +57,8 @@ body {
 
   width: 100vw;
   height: 100vh;
+
+  z-index: -1;
 }
 
 #displayContainer {
